--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container crt-scanlines">
         <!-- Add this inside the body tag -->
         <section class="hero-wrapper">
-            <h1>Will there be blood?</h1>
+            <h1>Will there be blood!</h1>
             <h2>Big Companies & Personal Data</h2>
         </section>
         <section data-title="The Internet of people">
